[Custom Trainer] Refactor postprocessing (#1302)
* remove __future__

* Update changelog

* 🚚 Trainer -> AnomalibTrainer

* add post-processor

* Refactor callback

* Remove handler

* Address PR comments

---------

Co-authored-by: Ashwin Vaidya <ashwinitinvaidya@gmail.com>

--- a/notebooks/000_getting_started/001_getting_started.ipynb
+++ b/notebooks/000_getting_started/001_getting_started.ipynb
@@ -127,7 +127,7 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "from PIL import Image\n",
-    "from pytorch_lightning import Trainer\n",
+    "from anomalib.trainer import AnomalibTrainer\n",
     "from torchvision.transforms import ToPILImage\n",
     "\n",
     "from anomalib.config import get_configurable_parameters\n",
@@ -322,7 +322,7 @@
    "outputs": [],
    "source": [
     "# start training\n",
-    "trainer = Trainer(**config.trainer, callbacks=callbacks)\n",
+    "trainer = AnomalibTrainer(**config.trainer, callbacks=callbacks)\n",
     "trainer.fit(model=model, datamodule=datamodule)"
    ]
   },
