--- a/notebooks/200_models/201_fastflow.ipynb
+++ b/notebooks/200_models/201_fastflow.ipynb
@@ -74,8 +74,9 @@
     "from typing import Any\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "from pytorch_lightning import LightningModule, Trainer\n",
-    "from pytorch_lightning.callbacks import EarlyStopping, ModelCheckpoint\n",
+    "from lightning.pytorch import LightningModule\n",
+    "from anomalib.trainer import AnomalibTrainer\n",
+    "from lightning.pytorch.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from torch.optim import Optimizer\n",
     "from torch.optim.adam import Adam\n",
     "from torch.utils.data import DataLoader\n",
@@ -361,7 +362,7 @@
     "\n",
     "Now that we set up the datamodule, model, optimizer and the callbacks, we could now train the model.\n",
     "\n",
-    "The final component to train the model is `pytorch_lightning` `Trainer` object, which handles train/test/predict pipeline. Let's create the trainer object to train the model.\n"
+    "The final component to train the model is `AnomalibTrainer` object, which handles train/test/predict pipeline. Let's create the trainer object to train the model.\n"
    ]
   },
   {
@@ -374,7 +375,7 @@
    },
    "outputs": [],
    "source": [
-    "trainer = Trainer(\n",
+    "trainer = AnomalibTrainer(\n",
     "    callbacks=callbacks,\n",
     "    accelerator=\"auto\",  # \\<\"cpu\", \"gpu\", \"tpu\", \"ipu\", \"hpu\", \"auto\">,\n",
     "    devices=1,\n",
