--- a/notebooks/400_openvino/401_nncf.ipynb
+++ b/notebooks/400_openvino/401_nncf.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pytorch_lightning import Trainer\n",
+    "from anomalib.trainer import AnomalibTrainer\n",
     "\n",
     "from anomalib.config import get_configurable_parameters\n",
     "from anomalib.data import get_datamodule\n",
@@ -138,7 +138,7 @@
     "callbacks = get_callbacks(config)\n",
     "\n",
     "# start training\n",
-    "trainer = Trainer(**config.trainer, callbacks=callbacks)\n",
+    "trainer = AnomalibTrainer(**config.trainer, callbacks=callbacks)\n",
     "trainer.fit(model=model, datamodule=datamodule)\n",
     "fp32_results = trainer.test(model=model, datamodule=datamodule)"
    ]
@@ -210,7 +210,7 @@
     "callbacks = get_callbacks(config)\n",
     "\n",
     "# start training\n",
-    "trainer = Trainer(**config.trainer, callbacks=callbacks)\n",
+    "trainer = AnomalibTrainer(**config.trainer, callbacks=callbacks)\n",
     "trainer.fit(model=model, datamodule=datamodule)\n",
     "int8_results = trainer.test(model=model, datamodule=datamodule)"
    ]
