Add new ruff rules (#1390)
* Add rules to pyproject.toml file

* Only include padim and stfpm in tests

* Fix notebook tests

* Fix notebook tests

--- a/notebooks/000_getting_started/001_getting_started.ipynb
+++ b/notebooks/000_getting_started/001_getting_started.ipynb
@@ -9,14 +9,14 @@
                 "\n",
                 "<center>💙 A library for benchmarking, developing and deploying deep learning anomaly detection algorithms</center>\n",
                 "\n",
-                "______________________________________________________________________\n",
+                "---\n",
                 "\n",
                 "> NOTE:\n",
                 "> This notebook is originally created by @innat on [Kaggle](https://www.kaggle.com/code/ipythonx/mvtec-ad-anomaly-detection-with-anomalib-library/notebook).\n",
                 "\n",
                 "[Anomalib](https://github.com/openvinotoolkit/anomalib): Anomalib is a deep learning library that aims to collect state-of-the-art anomaly detection algorithms for benchmarking on both public and private datasets. Anomalib provides several ready-to-use implementations of anomaly detection algorithms described in the recent literature, as well as a set of tools that facilitate the development and implementation of custom models. The library has a strong focus on image-based anomaly detection, where the goal of the algorithm is to identify anomalous images, or anomalous pixel regions within images in a dataset.\n",
                 "\n",
-                "The library supports [`MVTec AD`](https://www.mvtec.com/company/research/datasets/mvtec-ad) (CC BY-NC-SA 4.0) and [`BeanTech`](https://paperswithcode.com/dataset/btad) (CC-BY-SA) for **benchmarking** and `folder` for custom dataset **training/inference**. In this notebook, we will explore `anomalib` training a PADIM model on the `MVTec AD` bottle dataset and evaluating the model's performance. The sections in this notebook explores the steps in `tools/train.py` more in detail. Those who would like to reproduce the results via CLI could use `python tools/train.py --model padim`."
+                "The library supports [`MVTec AD`](https://www.mvtec.com/company/research/datasets/mvtec-ad) (CC BY-NC-SA 4.0) and [`BeanTech`](https://paperswithcode.com/dataset/btad) (CC-BY-SA) for **benchmarking** and `folder` for custom dataset **training/inference**. In this notebook, we will explore `anomalib` training a PADIM model on the `MVTec AD` bottle dataset and evaluating the model's performance. The sections in this notebook explores the steps in `tools/train.py` more in detail. Those who would like to reproduce the results via CLI could use `python tools/train.py --model padim`.\n"
             ]
         },
         {
@@ -24,7 +24,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Installing Anomalib"
+                "## Installing Anomalib\n"
             ]
         },
         {
@@ -32,7 +32,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Installation can be done in two ways: (i) install via PyPI, or (ii) installing from sourc, both of which are shown below:"
+                "Installation can be done in two ways: (i) install via PyPI, or (ii) installing from sourc, both of which are shown below:\n"
             ]
         },
         {
@@ -40,7 +40,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### I. Install via PyPI"
+                "### I. Install via PyPI\n"
             ]
         },
         {
@@ -59,7 +59,8 @@
             "metadata": {},
             "source": [
                 "### II. Install from Source\n",
-                "This option would initially download anomalib repository from github and manually install `anomalib` from source, which is shown below:"
+                "\n",
+                "This option would initially download anomalib repository from github and manually install `anomalib` from source, which is shown below:\n"
             ]
         },
         {
@@ -79,7 +80,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                " Now let's verify the working directory. This is to access the datasets and configs when the notebook is run from different platforms such as local or Google Colab."
+                "Now let's verify the working directory. This is to access the datasets and configs when the notebook is run from different platforms such as local or Google Colab.\n"
             ]
         },
         {
@@ -115,7 +116,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Imports"
+                "## Imports\n"
             ]
         },
         {
@@ -162,7 +163,7 @@
                 "- [R-KDE](https://ieeexplore.ieee.org/document/8999287)\n",
                 "- [STFPM](https://arxiv.org/pdf/2103.04257.pdf)\n",
                 "\n",
-                "In this tutorial, we'll be using Padim. Now, let's get their config paths from the respected folders."
+                "In this tutorial, we'll be using Padim. Now, let's get their config paths from the respected folders.\n"
             ]
         },
         {
@@ -172,7 +173,7 @@
             "source": [
                 "## Configuration\n",
                 "\n",
-                "In this demonstration, we will choose [Padim](https://arxiv.org/pdf/2011.08785.pdf) model from the above list. Let's take a quick look at its config file."
+                "In this demonstration, we will choose [Padim](https://arxiv.org/pdf/2011.08785.pdf) model from the above list. Let's take a quick look at its config file.\n"
             ]
         },
         {
@@ -192,7 +193,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "We could use [get_configurable_parameter](https://github.com/openvinotoolkit/anomalib/blob/main/anomalib/config/config.py#L114) function to read the configs from the path and return them in a dictionary. We use the default config file that comes with Padim implementation, which uses `./datasets/MVTec` as the path to the dataset. We need to overwrite this after loading the config."
+                "We could use [get_configurable_parameter](https://github.com/openvinotoolkit/anomalib/blob/main/anomalib/config/config.py#L114) function to read the configs from the path and return them in a dictionary. We use the default config file that comes with Padim implementation, which uses `./datasets/MVTec` as the path to the dataset. We need to overwrite this after loading the config.\n"
             ]
         },
         {
@@ -214,7 +215,7 @@
                 "\n",
                 "**MVTec AD** is a dataset for benchmarking anomaly detection methods with a focus on industrial inspection. It contains over **5000** high-resolution images divided into **15** different object and texture categories. Each category comprises a set of defect-free training images and a test set of images with various kinds of defects as well as images without defects. If the dataset is not located in the root datasets directory, anomalib will automatically install the dataset.\n",
                 "\n",
-                "We could now import the MVtec AD dataset using its specific datamodule implemented in anomalib."
+                "We could now import the MVtec AD dataset using its specific datamodule implemented in anomalib.\n"
             ]
         },
         {
@@ -244,7 +245,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Let's check the shapes of the input images and masks."
+                "Let's check the shapes of the input images and masks.\n"
             ]
         },
         {
@@ -269,7 +270,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "We could now visualize a normal and abnormal sample from the validation set."
+                "We could now visualize a normal and abnormal sample from the validation set.\n"
             ]
         },
         {
@@ -298,7 +299,7 @@
                 "\n",
                 "Now, the config file is updated as we want. We can now start model training with it. Here we will be using `datamodule`, `model` and `callbacks` to train the model. Callbacks are self-contained objects, which contains non-essential logic. This way we could inject as many callbacks as possible such as ModelLoading, Timer, Metrics, Normalization and Visualization\n",
                 "\n",
-                "In addition to the training, we would like to perform inference using OpenVINO. Therefore we will set the export configuration to openvino so that anomalib would export the trained model to the openvino format."
+                "In addition to the training, we would like to perform inference using OpenVINO. Therefore we will set the export configuration to openvino so that anomalib would export the trained model to the openvino format.\n"
             ]
         },
         {
@@ -331,7 +332,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Validation"
+                "## Validation\n"
             ]
         },
         {
@@ -352,7 +353,8 @@
             "metadata": {},
             "source": [
                 "## OpenVINO Inference\n",
-                "Now that we trained and tested a model, we could check a single inference result using OpenVINO inferencer object. This will demonstrate how a trained model could be used for inference."
+                "\n",
+                "Now that we trained and tested a model, we could check a single inference result using OpenVINO inferencer object. This will demonstrate how a trained model could be used for inference.\n"
             ]
         },
         {
@@ -362,7 +364,7 @@
             "source": [
                 "### Load a Test Image\n",
                 "\n",
-                "Let's read an image from the test set and perform inference using OpenVINO inferencer."
+                "Let's read an image from the test set and perform inference using OpenVINO inferencer.\n"
             ]
         },
         {
@@ -404,7 +406,7 @@
             "source": [
                 "### Load the OpenVINO Model\n",
                 "\n",
-                "By default, the output files are saved into `results` directory. Let's check where the OpenVINO model is stored."
+                "By default, the output files are saved into `results` directory. Let's check where the OpenVINO model is stored.\n"
             ]
         },
         {
@@ -421,7 +423,7 @@
                 }
             ],
             "source": [
-                "output_path = Path(config[\"project\"][\"path\"])\n",
+                "output_path = Path(config[\"trainer\"][\"default_root_dir\"])\n",
                 "print(output_path)"
             ]
         },
@@ -463,7 +465,8 @@
             "metadata": {},
             "source": [
                 "### Perform Inference\n",
-                "Predicting an image using OpenVINO inferencer is as simple as calling `predict` method."
+                "\n",
+                "Predicting an image using OpenVINO inferencer is as simple as calling `predict` method.\n"
             ]
         },
         {
@@ -497,7 +500,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "where `predictions` contain any relevant information regarding the task type. For example, predictions for a segmentation model could contain image, anomaly maps, predicted scores, labels or masks."
+                "where `predictions` contain any relevant information regarding the task type. For example, predictions for a segmentation model could contain image, anomaly maps, predicted scores, labels or masks.\n"
             ]
         },
         {
@@ -505,7 +508,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### Visualizing Inference Results"
+                "### Visualizing Inference Results\n"
             ]
         },
         {
@@ -685,7 +688,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "This wraps the `getting_started` notebook. There are a lot more functionalities that could be explored in the library. Please refer to the [documentation](https://openvinotoolkit.github.io/anomalib/) for more details."
+                "This wraps the `getting_started` notebook. There are a lot more functionalities that could be explored in the library. Please refer to the [documentation](https://openvinotoolkit.github.io/anomalib/) for more details.\n"
             ]
         }
     ],
