--- a/notebooks/200_models/201_fastflow.ipynb
+++ b/notebooks/200_models/201_fastflow.ipynb
@@ -86,15 +86,13 @@
                 "from anomalib.models.fastflow.lightning_model import Fastflow\n",
                 "from anomalib.post_processing import (\n",
                 "    NormalizationMethod,\n",
-                "    ThresholdMethod,\n",
                 "    superimpose_anomaly_map,\n",
                 ")\n",
                 "from anomalib.pre_processing.transforms import Denormalize\n",
+                "from anomalib.post_processing import VisualizationMode\n",
                 "from anomalib.utils.callbacks import (\n",
                 "    ImageVisualizerCallback,\n",
-                "    MetricsConfigurationCallback,\n",
                 "    MetricVisualizerCallback,\n",
-                "    PostProcessingConfigurationCallback,\n",
                 ")"
             ]
         },
@@ -326,11 +324,6 @@
             "outputs": [],
             "source": [
                 "callbacks = [\n",
-                "    MetricsConfigurationCallback(\n",
-                "        task=task,\n",
-                "        image_metrics=[\"AUROC\"],\n",
-                "        pixel_metrics=[\"AUROC\"],\n",
-                "    ),\n",
                 "    ModelCheckpoint(\n",
                 "        mode=\"max\",\n",
                 "        monitor=\"pixel_AUROC\",\n",
@@ -340,12 +333,6 @@
                 "        mode=\"max\",\n",
                 "        patience=3,\n",
                 "    ),\n",
-                "    PostProcessingConfigurationCallback(\n",
-                "        normalization_method=NormalizationMethod.MIN_MAX,\n",
-                "        threshold_method=ThresholdMethod.ADAPTIVE,\n",
-                "    ),\n",
-                "    ImageVisualizerCallback(mode=\"full\", task=task, image_save_path=\"./results/images\"),\n",
-                "    MetricVisualizerCallback(mode=\"full\", task=task, image_save_path=\"./results/images\"),\n",
                 "]"
             ]
         },
@@ -377,9 +364,9 @@
             "source": [
                 "engine = Engine(\n",
                 "    callbacks=callbacks,\n",
+                "    pixel_metrics=\"AUROC\",\n",
                 "    accelerator=\"auto\",  # \\<\"cpu\", \"gpu\", \"tpu\", \"ipu\", \"hpu\", \"auto\">,\n",
                 "    devices=1,\n",
-                "    max_epochs=100,\n",
                 "    logger=False,\n",
                 ")"
             ]
