--- a/notebooks/200_models/201_fastflow.ipynb
+++ b/notebooks/200_models/201_fastflow.ipynb
@@ -85,15 +85,9 @@
                 "from anomalib.data.mvtec import MVTec\n",
                 "from anomalib.models.fastflow.lightning_model import Fastflow\n",
                 "from anomalib.post_processing import (\n",
-                "    NormalizationMethod,\n",
                 "    superimpose_anomaly_map,\n",
                 ")\n",
-                "from anomalib.pre_processing.transforms import Denormalize\n",
-                "from anomalib.post_processing import VisualizationMode\n",
-                "from anomalib.utils.callbacks import (\n",
-                "    ImageVisualizerCallback,\n",
-                "    MetricVisualizerCallback,\n",
-                ")"
+                "from anomalib.pre_processing.transforms import Denormalize"
             ]
         },
         {
@@ -932,7 +926,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.11"
+            "version": "3.10.13"
         },
         "orig_nbformat": 4,
         "vscode": {
