Enable Ruff rules - Part III (#1397)
* pyflakes

* pycodestyle

* pep8-naming (`N`)

* pyupgrade (`UP`)

* flake8-bandit (`S`)

* Enabled UP, ANN, S, BLE, FBT, B

* Fix typo

* Revert F1AdaptiveThreshold parent classes

* Fix some of the tests

* ignore boolean-positional-value-in-call (FBT003)

* Addressed pr comments

* Remove duplicated lines

--- a/notebooks/500_use_cases/501_dobot/501b_inference_with_a_robotic_arm.ipynb
+++ b/notebooks/500_use_cases/501_dobot/501b_inference_with_a_robotic_arm.ipynb
@@ -331,7 +331,7 @@
     "    dType.SetEMotorEx(api, 1, 0, int(vel), 1)\n",
     "\n",
     "    if Calibration__0__Run__1:\n",
-    "        for count in range(9):\n",
+    "        for _ in range(9):\n",
     "            # initializing and starting multi-threaded webcam input stream\n",
     "            cam_stream = CameraStream(stream_id=0)  # 0 id for main camera\n",
     "            cam_stream.start()\n",
