--- a/notebooks/300_benchmarking/301_benchmarking.ipynb
+++ b/notebooks/300_benchmarking/301_benchmarking.ipynb
@@ -318,7 +318,9 @@
     "  multiple_trainloader_mode: max_size_cycle\n",
     "\n",
     "\"\"\"\n",
-    "with open(\"config.yaml\", \"w\", encoding=\"utf8\") as f:\n",
+    "from pathlib import Path\n",
+    "\n",
+    "with Path(\"config.yaml\").open(mode=\"w\", encoding=\"utf8\") as f:\n",
     "    f.writelines(folder_padim)"
    ]
   },
@@ -404,7 +406,7 @@
     "    - padim\n",
     "    - patchcore\n",
     "\"\"\"\n",
-    "with open(\"benchmark_config.yaml\", \"w\", encoding=\"utf8\") as f:\n",
+    "with Path(\"benchmark_config.yaml\").open(mode=\"w\", encoding=\"utf8\") as f:\n",
     "    f.writelines(benchmarking_params)"
    ]
   },
