--- a/notebooks/300_benchmarking/302_hpo_wandb.ipynb
+++ b/notebooks/300_benchmarking/302_hpo_wandb.ipynb
@@ -6,7 +6,7 @@
                 "id": "owTxSDKzB9oO"
             },
             "source": [
-                "# Walkthrough on Hyperparameter Optimization using Weights and Biases"
+                "# Walkthrough on Hyperparameter Optimization using Weights and Biases\n"
             ]
         },
         {
@@ -15,7 +15,8 @@
             "metadata": {},
             "source": [
                 "## Setting up the Working Directory\n",
-                "This cell is to ensure we change the directory to anomalib source code to have access to the datasets and config files. We assume that you already went through `001_getting_started.ipynb` and install the required packages."
+                "\n",
+                "This cell is to ensure we change the directory to anomalib source code to have access to the datasets and config files. We assume that you already went through `001_getting_started.ipynb` and install the required packages.\n"
             ]
         },
         {
@@ -62,7 +63,7 @@
                 "id": "BkrI2pI5C6Z-"
             },
             "source": [
-                "> Note: Restart Runtime if promted by clicking the button at the end of the install logs"
+                "> Note: Restart Runtime if promted by clicking the button at the end of the install logs\n"
             ]
         },
         {
@@ -71,7 +72,7 @@
                 "id": "gsWKy1FUCXoQ"
             },
             "source": [
-                "## Download and Setup Dataset"
+                "## Download and Setup Dataset\n"
             ]
         },
         {
@@ -96,7 +97,7 @@
             "source": [
                 "## Creating training configuration\n",
                 "\n",
-                "Since we are using our [custom dataset](https://openvinotoolkit.github.io/anomalib/how_to_guides/train_custom_data.html) we need to modify the default configuration file. The following configuration is based on the one available here `anomalib/anomalib/models/stfpm/config.yaml`. We will first read the stfpm configs and replace the dataset configuration with our custom dataset configuration."
+                "Since we are using our [custom dataset](https://openvinotoolkit.github.io/anomalib/how_to_guides/train_custom_data.html) we need to modify the default configuration file. The following configuration is based on the one available here `anomalib/anomalib/models/stfpm/config.yaml`. We will first read the stfpm configs and replace the dataset configuration with our custom dataset configuration.\n"
             ]
         },
         {
@@ -110,7 +111,7 @@
                 "dataset_configuration_str = f\"\"\"\n",
                 "  name: hazelnut\n",
                 "  format: folder\n",
-                "  root: {str(root_directory / \"datasets\" / \"hazelnut_toy\")}\n",
+                "  root: {(root_directory / \"datasets\" / \"hazelnut_toy\").as_posix()}\n",
                 "  normal_dir: good # name of the folder containing normal images.\n",
                 "  abnormal_dir: colour # name of the folder containing abnormal images.\n",
                 "  normal_test_dir: null # name of the folder containing normal test images.\n",
@@ -154,7 +155,7 @@
             "source": [
                 "## Create sweep configuration\n",
                 "\n",
-                "The following configuration file is based on the one available at `anomalib/tools/hpo/configs/stfpm.yaml`. For this example we will use the STFPM model. It is possible to define multiple parameters for each section. For instance, we can define multiple image_sizes, or backbones. The sweep will then run for each combination of parameters. We will also define the number of runs for each combination of parameters with `observation_budget`. The sweep will run for a total of 10 runs for this config file. You could increase the `observation_budget` to run more runs. "
+                "The following configuration file is based on the one available at `anomalib/tools/hpo/configs/stfpm.yaml`. For this example we will use the STFPM model. It is possible to define multiple parameters for each section. For instance, we can define multiple image_sizes, or backbones. The sweep will then run for each combination of parameters. We will also define the number of runs for each combination of parameters with `observation_budget`. The sweep will run for a total of 10 runs for this config file. You could increase the `observation_budget` to run more runs.\n"
             ]
         },
         {
@@ -194,7 +195,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "> NOTE: To speed up the runs, we will use a small number of epochs and observation_budget. You could increase these parametere to get better results."
+                "> NOTE: To speed up the runs, we will use a small number of epochs and observation_budget. You could increase these parametere to get better results.\n"
             ]
         },
         {
@@ -360,7 +361,7 @@
                 "id": "OhS88SuxFFzi"
             },
             "source": [
-                "While only a few parameters were shown in this example, you can call HPO on any of the parameters defined in the `model` and `dataset` section of the model configuration file."
+                "While only a few parameters were shown in this example, you can call HPO on any of the parameters defined in the `model` and `dataset` section of the model configuration file.\n"
             ]
         },
         {
@@ -371,7 +372,7 @@
             "source": [
                 "Congratulations 🎉 You have now successfully optimized a model on your dataset.\n",
                 "\n",
-                "To go into more detail, refer our documentation on [hyperparameter optimization](https://openvinotoolkit.github.io/anomalib/tutorials/hyperparameter_optimization.html)."
+                "To go into more detail, refer our documentation on [hyperparameter optimization](https://openvinotoolkit.github.io/anomalib/tutorials/hyperparameter_optimization.html).\n"
             ]
         }
     ],
