--- a/notebooks/500_use_cases/501_dobot/501b_inference_with_a_robotic_arm.ipynb
+++ b/notebooks/500_use_cases/501_dobot/501b_inference_with_a_robotic_arm.ipynb
@@ -266,15 +266,6 @@
     "# pylint: disable=wrong-import-order\n",
     "import DobotDllType as dType\n",
     "\n",
-    "# from anomalib.post_processing import visualizer  # comment this line if you don't have the Dobot Magician\n",
-    "\n",
-    "# # Uncomment these lines if you would like to visualize\n",
-    "# from anomalib.post_processing import Visualizer, VisualizationMode\n",
-    "# from anomalib.data import TaskType\n",
-    "# from PIL import Image\n",
-    "\n",
-    "# visualizer = Visualizer(mode=VisualizationMode.FULL, task=TaskType.SEGMENTATION)\n",
-    "\n",
     "CON_STR = {\n",
     "    dType.DobotConnect.DobotConnect_NoError: \"DobotConnect_NoError\",\n",
     "    dType.DobotConnect.DobotConnect_NotFound: \"DobotConnect_NotFound\",\n",
@@ -298,7 +289,7 @@
     "        \"[BLOCKS] Place them besides the non-motor side of the conveyor belt,\"\n",
     "        \" the same side where the pick and place arm is.\",\n",
     "    )\n",
-    "    print(\"[PLACING BLOCKS] Place the blocks by 3×3.\")\n",
+    "    print(\"[PLACING BLOCKS] Place the blocks by 3x3.\")\n",
     "    print(\"[CALIBRATION POINT] Looking from the back of Dobot, the top left block is the calibration point.\")\n",
     "    print(\"[CALIBRATION] Set the first variable to 0 to test the calibration point, then set 1 to start running.\")\n",
     "    print(\n",
@@ -338,7 +329,6 @@
     "\n",
     "            dType.SetPTPCmdEx(api, 0, (Calibration_X - j), (Calibration_Y - k), (Calibration_Z - 10), 0, 1)\n",
     "            dType.SetEndEffectorSuctionCupEx(api, 1, 1)\n",
-    "            # dType.dSleep(150)\n",
     "            dType.SetPTPCmdEx(api, 0, (Place_X - 0), (Place_Y - 0), (Place_Z + 90), 0, 1)\n",
     "\n",
     "            # adding a delay for simulating video processing time\n",
@@ -364,12 +354,7 @@
     "                else:\n",
     "                    dType.SetPTPCmdEx(api, 0, Place_X, Place_Y, Place_Z, 0, 1)\n",
     "\n",
-    "                # To visualize the results uncomment\n",
-    "                # output_image = visualizer.visualize_image(predictions)\n",
-    "                # plt.imshow(output_image)\n",
-    "\n",
     "            dType.SetEndEffectorSuctionCupEx(api, 0, 1)\n",
-    "            # dType.dSleep(150)\n",
     "            j = j + 25\n",
     "            if j == 75:\n",
     "                k = k + 25\n",
