--- a/notebooks/200_models/201_fastflow.ipynb
+++ b/notebooks/200_models/201_fastflow.ipynb
@@ -282,7 +282,7 @@
             },
             "outputs": [],
             "source": [
-                "def configure_optimizers(lightning_module: LightningModule, optimizer: Optimizer) -> Any:  # pylint: disable=W0613,W0621\n",
+                "def configure_optimizers(lightning_module: LightningModule, optimizer: Optimizer) -> Any:\n",
                 "    \"\"\"Override to customize the LightningModule.configure_optimizers` method.\"\"\"\n",
                 "    del lightning_module  # Unused argument.\n",
                 "    return optimizer\n",
