Enable Ruff Rules - Part 8 (#1412)
* pyflakes

* pycodestyle

* pep8-naming (`N`)

* pyupgrade (`UP`)

* flake8-bandit (`S`)

* Enabled UP, ANN, S, BLE, FBT, B

* Fix typo

* Revert F1AdaptiveThreshold parent classes

* Fix some of the tests

* ignore boolean-positional-value-in-call (FBT003)

* Addressed pr comments

* Remove duplicated lines

* flake8-builtins (`A`) and flake8-commas (`COM`)

* flake8-comprehensions (`C4`)

* flake8-datatimez (`DTZ`), flake8-debugger (`T10`), flake8-errmsg (`EM`)

* flake8-pie (`PIE`)

* flake8-raise (`RSE`)

* flake8-return (`RET`)

* flake8-self (`SLF`)

* flake8-simplify (`SIM`)

* flake8-unsused-arguments (`ARG`)

* flake8-use-pathlib (`PTH`)

* eradicate (`ERA`)

* pylint (`PL`)

* tryceratos (`TRY`), flynt (`FLY`), Perflint (`PERF`)

* NumPy-specific rules (`NPY`)

* Ruff-specific rules (`RUF`)

* Remove pylint ignore comments

* Fix tests

* Fix tests

* mccabe (`C90`)

* pygrep-hooks (`PGH`)

* flake8-todos (`TD`)

* flake8-fixme (`FIX`)

* pandas-vet (`PD`)

* ignore ANN101 ANN102 and ANN103

* Fix random_split tests

* Fix pre-commit

* ANN partly done

* Remove kwargs: Any

* flake8-annotations (`ANN`)

* Enabled tests

* Revert padim configs

--- a/notebooks/200_models/201_fastflow.ipynb
+++ b/notebooks/200_models/201_fastflow.ipynb
@@ -71,7 +71,6 @@
             "source": [
                 "from functools import partial, update_wrapper\n",
                 "from types import MethodType\n",
-                "from typing import Any\n",
                 "\n",
                 "from matplotlib import pyplot as plt\n",
                 "from lightning.pytorch import LightningModule\n",
@@ -282,7 +281,7 @@
             },
             "outputs": [],
             "source": [
-                "def configure_optimizers(lightning_module: LightningModule, optimizer: Optimizer) -> Any:\n",
+                "def configure_optimizers(lightning_module: LightningModule, optimizer: Optimizer) -> Optimizer:\n",
                 "    \"\"\"Override to customize the LightningModule.configure_optimizers` method.\"\"\"\n",
                 "    del lightning_module  # Unused argument.\n",
                 "    return optimizer\n",
