--- a/notebooks/500_use_cases/501_dobot/501b_inference_with_a_robotic_arm.ipynb
+++ b/notebooks/500_use_cases/501_dobot/501b_inference_with_a_robotic_arm.ipynb
@@ -56,12 +56,15 @@
    "source": [
     "# Anomalib imports\n",
     "from __future__ import annotations\n",
-    "\n",
+    "from typing import TYPE_CHECKING\n",
     "import sys\n",
     "import time  # time library\n",
     "from datetime import datetime\n",
     "from pathlib import Path\n",
     "from threading import Thread\n",
+    "\n",
+    "if TYPE_CHECKING:\n",
+    "    import numpy as np\n",
     "\n",
     "# importing required libraries\n",
     "import cv2  # OpenCV library\n",
@@ -219,7 +222,7 @@
     "                break\n",
     "        self.video_capture.release()\n",
     "\n",
-    "    def read(self):\n",
+    "    def read(self) -> np.ndarray:\n",
     "        \"\"\"Method to return latest read frame.\"\"\"\n",
     "        return self.frame\n",
     "\n",
